--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
 .DS_Store
 .devcontainer
 .idea
 .vscode
-CMakeFiles
-CMakeCache.txt
-cmake_install.cmake
-Makefile
-Shell
