funciona pero no espera al pipe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Shell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Shell Shell_project.c job_control.c job_control.h history.c history.h readline.h readline.c)
+add_executable(Shell Shell_project.c job_control.c job_control.h history.c history.h readline.h readline.c pipe.c pipe.h)
