restructuracion de proyecto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,17 @@ project(Shell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Shell Shell_project.c job_control.c job_control.h history.c history.h readline.h readline.c pipe.c pipe.h)
+add_executable(
+    Shell 
+    Shell_project.c 
+    job/job_control.h 
+    job/job_control.c 
+    history/history.h 
+    history/history.c 
+    pipe/pipe.h 
+    pipe/pipe.c 
+    readline/readline.h 
+    readline/readline.c 
+    readline/cursor.h
+    readline/cursor.c 
+)
